<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".BaseActivity.MainActivity">


    <group android:id="@+id/grpSystem">
        <item
            android:id="@+id/action_mservip"
            android:icon="@raw/mservip"
            android:orderInCategory="100"
            android:title="@string/action_mservip"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_userChange"
            android:icon="@raw/change_user"
            android:orderInCategory="100"
            android:title="@string/action_userChange"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_update"
            android:icon="@raw/update"
            android:orderInCategory="100"
            android:title="@string/action_update"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_info"
            android:icon="@raw/information"
            android:orderInCategory="100"
            android:title="@string/action_info"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_help"
            android:icon="@raw/help"
            android:orderInCategory="100"
            android:title="@string/action_help"
            app:showAsAction="never" />
    </group>

    <group
        android:id="@+id/grpDebug"
        android:checkableBehavior="all">
        <item
            android:id="@+id/action_debug"
            android:checkable="true"
            android:checked="true"
            android:icon="@android:drawable/ic_menu_preferences"
            android:orderInCategory="100"
            android:title="@string/action_debug"
            android:visible="false"
             />
    </group>

</menu>
