<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:windowSoftInputMode="adjustPan|adjustResize">

    <TextView
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:longClickable="true"
        android:text="@string/auth_auth"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/auth_mag"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Login"
        android:layout_alignParentStart="true"
        android:layout_marginStart="8dp"
        android:text="@string/auth_mag"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_city_spin" />

    <TextView
        android:id="@+id/auth_city"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/auth_mag"
        android:layout_alignStart="@+id/auth_mag"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/auth_city"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login" />

    <TextView
        android:id="@+id/attempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/auth_city"
        android:layout_alignStart="@+id/auth_city"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/Login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/auth_code"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bgbtn_auth"
        android:enabled="false"
        android:textColor="@color/monroRed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/auth_city_spin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_city"
        tools:ignore="SpeakableTextPresentCheck" />

    <Spinner
        android:id="@+id/auth_mag_spin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_city_spin"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/auth_tel"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/auth_tel"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_mag_spin" />

    <TextView
        android:id="@+id/auth_tel_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/auth_tel"
        app:layout_constraintTop_toBottomOf="@+id/auth_mag_spin" />

    <Button
        android:id="@+id/auth_sendcode_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:enabled="false"
        android:text="@string/auth_scode"
        android:textAppearance="?android:attr/textAppearanceButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_tel" />

    <TextView
        android:id="@+id/auth_code"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/auth_code"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_timer" />

    <EditText
        android:id="@+id/auth_code_edt"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:enabled="false"
        android:hint="****"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/auth_code"
        app:layout_constraintTop_toBottomOf="@+id/auth_timer" />

    <TextView
        android:id="@+id/auth_timer"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:enabled="false"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#F9A825"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/auth_code_edt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auth_sendcode_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>