<?xml version="1.0" encoding="utf-8"?>

<com.mxn.soul.flowingdrawer_core.FlowingDrawer xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    app:edMenuBackground="@color/monroWhite"
    app:edMenuSize="250dp"
    app:edPosition="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:id="@+id/mainScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:keepScreenOn="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".BaseActivity.MainActivity">

                <TextView
                    android:id="@+id/mainHeader"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/geometria_extrabold"
                    android:text="Магазин №999 НЕИЗВЕСТНО"
                    android:textColor="@color/monroBlack"
                    android:textSize="36sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/options"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="8dp"
                    android:layout_marginEnd="8dp"
                    android:src="@android:drawable/ic_menu_manage"
                    app:backgroundTint="@color/monroBlack"
                    app:fabSize="normal"
                    app:layout_anchorGravity="top|right|end"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/mainlv1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_panel"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mainHeader">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/monroSoft"
                        android:fontFamily="@font/geometria"
                        android:text="@string/str_info"
                        android:textAlignment="center"
                        android:textColor="@color/monroWhite"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:id="@+id/mainlh1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="vertical"
                        android:paddingStart="7dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="7dp"
                        android:paddingBottom="4dp"
                        tools:ignore="RtlSymmetry">

                        <Button
                            android:id="@+id/btn_infokiosk"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/geometria_medium"
                            android:layout_weight="1"
                            android:text="@string/btn_infok"
                            android:textAlignment="center"
                            android:textColor="@color/monroWhite"
                            android:textSize="36sp"
                            android:theme="@style/MainButton" />

                        <Button
                            android:id="@+id/btn_infodk"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/geometria_medium"
                            android:layout_weight="1"
                            android:text="@string/btn_infodk"
                            android:textAlignment="center"
                            android:textColor="@color/monroWhite"
                            android:textSize="36sp"
                            android:theme="@style/MainButton" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mainlv2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_panel"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mainlv1">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/monroSoft"
                        android:fontFamily="@font/geometria"
                        android:text="@string/str_checks"
                        android:textAlignment="center"
                        android:textColor="@color/monroWhite"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:id="@+id/mainlh2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="horizontal"
                        android:paddingStart="7dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="7dp"
                        android:paddingBottom="4dp"
                        tools:ignore="RtlSymmetry">

                        <Button
                            android:id="@+id/btn_checkprice"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="-1dp"
                            android:layout_weight="1"
                            android:drawablePadding="5dp"
                            android:fontFamily="@font/geometria_medium"
                            android:gravity="center"
                            android:text="@string/str_checkprice"
                            android:textColor="@color/monroWhite"
                            android:textSize="23sp"
                            android:theme="@style/MainButton" />

                        <Button
                            android:id="@+id/btn_checkkm"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="-1dp"
                            android:layout_weight="1"
                            android:drawablePadding="5dp"
                            android:fontFamily="@font/geometria_medium"
                            android:gravity="center"
                            android:text="@string/str_checkkm"
                            android:textColor="@color/monroWhite"
                            android:textSize="23sp"
                            android:theme="@style/MainButton" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mainlv3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_panel"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/mainlv2">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/monroSoft"
                        android:fontFamily="@font/geometria"
                        android:text="@string/str_rep"
                        android:textAlignment="center"
                        android:textColor="@color/monroWhite"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:id="@+id/mainlh3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="8dp"
                        android:orientation="vertical"
                        android:paddingStart="7dp"
                        android:paddingTop="4dp"
                        android:paddingEnd="7dp"
                        android:paddingBottom="4dp"
                        tools:ignore="RtlSymmetry">

                        <Button
                            android:id="@+id/btn_fotorep"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/geometria_medium"
                            android:layout_weight="1"
                            android:text="@string/btn_fotorep"
                            android:textAlignment="center"
                            android:textColor="@color/monroWhite"
                            android:textSize="36sp"
                            android:theme="@style/MainButton" />

                    </LinearLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>


        <ImageView
            android:id="@+id/shadow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@color/monroShad"/>

        <FrameLayout
            android:id="@+id/frame_whatsnew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/shape_row"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btn_frclose"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="Закрыть"
                android:textColor="@color/monroWhite"
                android:theme="@style/MainButton" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/geometria_extrabold"
                    android:text="@string/whatsnew"
                    android:textAlignment="center"
                    android:textColor="@color/monroBlack"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/whatsnew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/geometria_medium"
                    android:maxLines="50"
                    android:singleLine="false"
                    android:text=""
                    android:textAlignment="viewStart"
                    android:textColor="@color/monroBlack"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/geometria"
                    android:text="@string/whatsnew_extra"
                    android:textAlignment="viewStart"
                    android:textColor="@color/monroBlack"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </LinearLayout>
        </FrameLayout>
    </RelativeLayout>

    <!--menu-->
    <com.mxn.soul.flowingdrawer_core.FlowingMenuLayout
        android:id="@+id/mainMenuLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/mainMenuFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.mxn.soul.flowingdrawer_core.FlowingMenuLayout>
</com.mxn.soul.flowingdrawer_core.FlowingDrawer>